[IMP] Re-enabled argument voting, Show line breaks in content, Improved side helpers for motion / question / argument form pages, Minor styling stuff [FIX] Show username when full name is missing

--- a/app/assets/stylesheets/briarcliff/_forms.scss
+++ b/app/assets/stylesheets/briarcliff/_forms.scss
@@ -58,6 +58,7 @@ label {
 
 .form-item {
   padding-bottom: 1em;
+  padding-top: 0.6;
   width: 70%;
   display: inline-block;
   @include bp-medium {
